pagina de blogs andando, pero incompleta

--- a/Blog_Page/AppBlog/templates/AppBlog/base.html
+++ b/Blog_Page/AppBlog/templates/AppBlog/base.html
@@ -22,6 +22,7 @@
                     <li class="nav-item"><a class="nav-link" href="{% url 'categorias' %}">Categorías</a></li>
                     <li class="nav-item"><a class="nav-link" href="{% url 'resenas' %}">Reseñas</a></li>
                     <li class="nav-item"><a class="nav-link" href="{% url 'about' %}">About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{% url 'lista_blogs' %}">Blogs</a></li>
                 </ul>
             </div>
         </div>
