--- a/Blog_Page/AppBlog/templates/AppBlog/detalle_blog.html
+++ b/Blog_Page/AppBlog/templates/AppBlog/detalle_blog.html
@@ -1,3 +1,9 @@
+{% extends 'AppBlog/base.html' %}
+
+{% block title %} Detalle del Blog {% endblock title %}
+
+{% block main %}
 <h1>{{ blog.titulo }}</h1>
 <p>{{ blog.contenido }}</p>
 <!-- Aquí puedes añadir más campos del blog según lo necesites -->
+{% endblock main %}
