mejoras en la pagina blogs

--- a/Blog_Page/AppBlog/templates/AppBlog/base.html
+++ b/Blog_Page/AppBlog/templates/AppBlog/base.html
@@ -28,6 +28,7 @@
         </div>
     </nav>
     {% block main %}
+    <div class="mt-5"> 
     {% endblock main %}
     <!-- Pie de página -->
     <footer class="py-5 bg-dark">
