por modificar blogs

--- a/Blog_Page/AppBlog/templates/AppBlog/lista_blogs.html
+++ b/Blog_Page/AppBlog/templates/AppBlog/lista_blogs.html
@@ -5,7 +5,7 @@
 {% block title %} Inicio {% endblock title %}
 
 {% block main %}
-
+<div style="height: 50px;"></div> 
 <!-- Películas -->
 <div class="container mt-5">
   <div class="row">
