--- a/Blog_Page/AppBlog/templates/AppBlog/detalle_blog.html
+++ b/Blog_Page/AppBlog/templates/AppBlog/detalle_blog.html
@@ -1,9 +1,17 @@
 {% extends 'AppBlog/base.html' %}
 
+{% load static %}
+
 {% block title %} Detalle del Blog {% endblock title %}
 
 {% block main %}
-<h1>{{ blog.titulo }}</h1>
-<p>{{ blog.contenido }}</p>
-<!-- Aquí puedes añadir más campos del blog según lo necesites -->
+<div class="container mt-5">
+    <h1>{{ blog.titulo }}</h1>
+    <img src="{{ blog.imagen }}" alt="{{ blog.titulo }}" class="img-fluid mb-3">
+    <p><strong>Fecha de Publicación:</strong> {{ blog.fecha_publicacion }}</p>
+    <div>
+        {{ blog.contenido|linebreaks }}
+    </div>
+    <a href="{% url 'lista_blogs' %}" class="btn btn-primary mt-3">Volver a la lista</a>
+</div>
 {% endblock main %}
