--- a/Blog_Page/AppBlog/templates/AppBlog/lista_blogs.html
+++ b/Blog_Page/AppBlog/templates/AppBlog/lista_blogs.html
@@ -10,7 +10,7 @@
     <h2>Blogs</h2>
     {% for blog in blogs %}
         <div class="card mb-4">
-            <img src="{{ blog.imagen }}" alt="{{ blog.titulo }}">
+            <img src="{{ blog.imagen.url }}" alt="{{ blog.titulo }}">
             <div class="card-body">
                 <h5 class="card-title">{{ blog.titulo }}</h5>
                 <p class="card-text">{{ blog.resumen }}</p>
