--- a/Blog_Page/AppBlog/templates/AppBlog/detalle_blog.html
+++ b/Blog_Page/AppBlog/templates/AppBlog/detalle_blog.html
@@ -5,18 +5,23 @@
 {% block title %} Detalle del Blog {% endblock title %}
 
 {% block main %}
-<div class="container mt-5">
+<div class="container mt-5" style="max-width: 600px; overflow: hidden;">
     <h1>{{ blog.titulo }}</h1>
-    <img src="{{ blog.imagen.url }}" alt="{{ blog.titulo }}" class="img-fluid mb-3">
-    <p><strong>Fecha de Creación:</strong> {{ blog.fecha_creacion }}</p>
-    <div>
-        {{ blog.contenido|linebreaks }}
+    <h4>{{ blog.subtitulo }}</h4>
+    <img src="{{ blog.imagen.url }}" alt="Imagen del blog" style="width: 100%; height: auto; margin-bottom: 20px;">
+
+    <div style="clear: both; padding-top: 10px;">
+        <p><strong>Fecha de Creación:</strong> {{ blog.fecha_creacion }}</p>
+        <div>
+            {{ blog.cuerpo|linebreaks }}
+        </div>
     </div>
 
     <!-- Botones para editar y borrar el blog -->
-    <a href="{% url 'editar_blog' blog.id %}" class="btn btn-secondary mt-2">Editar Blog</a>
-    <a href="{% url 'borrar_blog' blog.id %}" class="btn btn-danger mt-2">Borrar Blog</a>
-
-    <a href="{% url 'lista_blogs' %}" class="btn btn-primary mt-3">Volver a la lista</a>
+    <div class="mt-3">
+        <a href="{% url 'editar_blog' blog.id %}" class="btn btn-secondary">Editar Blog</a>
+        <a href="{% url 'borrar_blog' blog.id %}" class="btn btn-danger">Borrar Blog</a>
+        <a href="{% url 'lista_blogs' %}" class="btn btn-primary mt-3">Volver a la lista</a>
+    </div>
 </div>
 {% endblock main %}
