--- a/Blog_Page/AppBlog/templates/AppBlog/detalle_blog.html
+++ b/Blog_Page/AppBlog/templates/AppBlog/detalle_blog.html
@@ -17,11 +17,13 @@
         </div>
     </div>
 
-    <!-- Botones para editar y borrar el blog -->
-    <div class="mt-3">
+<!-- Botones para editar y borrar el blog -->
+<div class="mt-3">
+    {% if request.user.is_authenticated and request.user.is_staff %}
         <a href="{% url 'editar_blog' blog.id %}" class="btn btn-secondary">Editar Blog</a>
         <a href="{% url 'borrar_blog' blog.id %}" class="btn btn-danger">Borrar Blog</a>
-        <a href="{% url 'lista_blogs' %}" class="btn btn-primary mt-3">Volver a la lista</a>
-    </div>
+    {% endif %}
+    <a href="{% url 'lista_blogs' %}" class="btn btn-primary mt-3">Volver a la lista</a>
+</div>
 </div>
 {% endblock main %}
