--- a/Blog_Page/Usuarios/templates/users/perfil.html
+++ b/Blog_Page/Usuarios/templates/users/perfil.html
@@ -4,7 +4,7 @@
 
 {% block main %}
 {% if not request.user.is_authenticated %}
-    <a href="{% url 'iniciar_sesion' %}">Iniciar Sesión</a> | 
+    <a href="{% url 'login' %}">Iniciar Sesión</a> | 
     <a href="{% url 'registro' %}">Registrarse</a>
 {% endif %}
 {% endblock main %}
