pagina funcionando! solo falta mejorarla. rama 4-usuarios finalizada

--- a/Blog_Page/AppBlog/templates/AppBlog/base.html
+++ b/Blog_Page/AppBlog/templates/AppBlog/base.html
@@ -23,6 +23,8 @@
                     <li class="nav-item"><a class="nav-link" href="{% url 'resenas' %}">Reseñas</a></li>
                     <li class="nav-item"><a class="nav-link" href="{% url 'about' %}">About</a></li>
                     <li class="nav-item"><a class="nav-link" href="{% url 'lista_blogs' %}">Blogs</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{% url 'login' %}">Iniciar Sesión</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{% url 'register' %}">Crear cuenta</a></li>
                 </ul>
             </div>
         </div>
