--- a/Blog_Page/Usuarios/templates/Usuarios/registro.html
+++ b/Blog_Page/Usuarios/templates/Usuarios/registro.html
@@ -10,7 +10,7 @@
             <h1>Registro de Usuarios</h1>
             <form method="post">
                 {% csrf_token %}
-                {{ formulario.as_p }}
+                {{ form.as_p }}
                 <button type="submit">Registrar</button>
             </form>
             <a href="{% url 'login' %}">Ya tengo una cuenta</a>
