--- a/Blog_Page/AppBlog/templates/AppBlog/base.html
+++ b/Blog_Page/AppBlog/templates/AppBlog/base.html
@@ -9,6 +9,15 @@
     <link href="{% static 'AppBlog/css/styles.css' %}" rel="stylesheet" />
 </head>
 <body id="page-top">
+    {% if messages %}
+<div class="messages">
+    {% for message in messages %}
+    <div{% if message.tags %} class="{{ message.tags }}"{% endif %}>
+        {{ message }}
+    </div>
+    {% endfor %}
+</div>
+{% endif %}
     <!-- Navegación -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container">
