--- a/Blog_Page/Usuarios/templates/Usuarios/editar.html
+++ b/Blog_Page/Usuarios/templates/Usuarios/editar.html
@@ -8,7 +8,7 @@
     <form action="" method="POST" enctype="multipart/form-data">
         {% csrf_token %}
         <table>
-            {{ formulario_edicion.as_table }}
+            {{ mi_form.as_table }}
         </table>
         <button type="submit">Actualizar</button>
     </form>
