--- a/Blog_Page/Usuarios/templates/Usuarios/perfil.html
+++ b/Blog_Page/Usuarios/templates/Usuarios/perfil.html
@@ -3,8 +3,24 @@
 {% block title %} Perfil de Usuario {% endblock title %}
 
 {% block main %}
-{% if not request.user.is_authenticated %}
+{% if request.user.is_authenticated %}
+    <h2>Perfil de {{ request.user.username }}</h2>
+{% if request.user.userprofile.avatar %}
+    <img src="{{ request.user.userprofile.avatar.url }}" alt="Avatar" width="100">
+{% else %}
+<!-- Muestra una imagen de avatar predeterminada o nada en absoluto -->
+{% endif %}
+    <!-- ... más detalles del perfil ... -->
+    <a href="{% url 'editar' %}">Editar Perfil</a> | 
+    <a href="{% url 'logout' %}">Desloguearse</a>
+{% else %}
     <a href="{% url 'login' %}">Iniciar Sesión</a> | 
     <a href="{% url 'registro' %}">Registrarse</a>
 {% endif %}
 {% endblock main %}
+
+{% if request.user.userprofile.avatar %}
+    <img src="{{ request.user.userprofile.avatar.url }}" alt="Avatar" width="100">
+{% else %}
+    <!-- Muestra una imagen de avatar predeterminada o nada en absoluto -->
+{% endif %}
