--- a/Blog_Page/AppBlog/templates/AppBlog/base.html
+++ b/Blog_Page/AppBlog/templates/AppBlog/base.html
@@ -37,7 +37,7 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'perfil' %}">
                             {% if user.userprofile.avatar %}
-                                <img src="{{ user.userprofile.avatar.url }}" alt="Avatar del usuario" style="width:30px; height:30px; border-radius:50%; margin-right:10px;">
+                                <img src="{{ user.userprofile.avatar.url }}" alt="" style="width:30px; height:30px; border-radius:50%; margin-right:10px;">
                             {% else %}
                                 <img src="{% static 'Blog_Page/media/avatar/generico.png' %}" alt="" style="width:30px; height:30px; border-radius:50%; margin-right:10px;">
                             {% endif %}
