--- a/Blog_Page/Usuarios/templates/Usuarios/perfil.html
+++ b/Blog_Page/Usuarios/templates/Usuarios/perfil.html
@@ -6,6 +6,11 @@
 
 {% block main %}
 {% if request.user.is_authenticated %}
+    <form method="post" enctype="multipart/form-data">
+        {% csrf_token %}
+        {{ form.avatar }}
+        <button type="submit">Subir nuevo Avatar</button>
+    </form>
     <h2>Perfil de {{ request.user.username }}</h2>
     {% if request.user.userprofile.avatar %}
         <img src="{{ request.user.userprofile.avatar.url }}" alt="Avatar" width="100">
