--- a/Blog_Page/Usuarios/templates/Usuarios/perfil.html
+++ b/Blog_Page/Usuarios/templates/Usuarios/perfil.html
@@ -8,7 +8,6 @@
 {% if request.user.is_authenticated %}
     <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
-        {{ form.avatar }}
         <button type="submit">Subir nuevo Avatar</button>
     </form>
     <h2>Perfil de {{ request.user.username }}</h2>
@@ -26,3 +25,9 @@
     <a href="{% url 'registro' %}">Registrarse</a>
 {% endif %}
 {% endblock main %}
+
+<form method="post" enctype="multipart/form-data">
+    {% csrf_token %}
+    {{ form.avatar }}
+    <button type="submit">Subir nuevo Avatar</button>
+</form>
