pequeñas mejoras, vamos bien

--- a/Blog_Page/Usuarios/templates/Usuarios/perfil.html
+++ b/Blog_Page/Usuarios/templates/Usuarios/perfil.html
@@ -5,20 +5,16 @@
 {% block title %} Perfil de Usuario {% endblock title %}
 
 {% block main %}
+
 {% if request.user.is_authenticated %}
     <h2>Perfil de {{ request.user.username }}</h2>
     {% if request.user.userprofile.avatar %}
-        <img src="{{ request.user.userprofile.avatar.url }}" alt="Avatar" width="100">
+        <img src="{{ request.user.userprofile.avatar.url }}" alt="" width="100">
     {% else %}
         <!-- En caso de que, por alguna razón, el avatar no esté configurado -->
         <img src="{% static 'Blog_Page/media/avatar/generico.png' %}" alt="" width="100">
     {% endif %}
-    <!-- Código para subir avatar -->
-    <form method="post" enctype="multipart/form-data">
-        {{ mi_form.avatar.label }}: {{ mi_form.avatar }}
-        <input type="submit" value="Subir Avatar">
-        {% csrf_token %}
-    </form>
+
     <!-- ... más detalles del perfil ... -->
     <a href="{% url 'editar' %}">Editar Perfil</a> | 
     <a href="{% url 'logout' %}">Desloguearse</a>
