--- a/Blog_Page/AppBlog/templates/AppBlog/base.html
+++ b/Blog_Page/AppBlog/templates/AppBlog/base.html
@@ -8,7 +8,8 @@
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="{% static 'AppBlog/css/styles.css' %}" rel="stylesheet" />
 </head>
-<body id="page-top">
+<body id="page-top" style="padding-top: 4.5rem;">
+
     
     {% if messages %}
     <div class="messages">
@@ -37,7 +38,7 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'perfil' %}">
                             {% if user.userprofile.avatar %}
-                                <img src="{{ user.userprofile.avatar.url }}" alt="Avatar del usuario" style="width:30px; height:30px; border-radius:50%; margin-right:10px;">
+                                <img src="{{ user.userprofile.get_avatar_url }}" alt="" style="width:30px; height:30px; border-radius:50%; margin-right:10px;">
                             {% else %}
                                 <img src="{% static 'Blog_Page/media/avatar/generico.png' %}" alt="" style="width:30px; height:30px; border-radius:50%; margin-right:10px;">
                             {% endif %}
@@ -57,7 +58,8 @@
 
 
     {% block main %}
-    <div class="mt-5"> 
+    <div style="margin-top: 5rem;"> 
+
     {% endblock main %}
     <!-- Pie de página -->
     <footer class="py-5 bg-dark">
