--- a/Blog_Page/AppBlog/templates/AppBlog/detalle_blog.html
+++ b/Blog_Page/AppBlog/templates/AppBlog/detalle_blog.html
@@ -17,11 +17,17 @@
         </div>
     </div>
 
-<!-- Botones para editar y borrar el blog -->
-<div class="mt-3">
-        <a href="{% url 'editar_blog' blog.id %}" class="btn btn-secondary">Editar Blog</a>
-        <a href="{% url 'borrar_blog' blog.id %}" class="btn btn-danger">Borrar Blog</a>
+    <!-- Verifica si el usuario es superusuario -->
+    {% if user.is_superuser %}
+    <!-- Botones para editar y borrar el blog -->
+    <div class="mt-3">
+            <a href="{% url 'editar_blog' blog.id %}" class="btn btn-secondary">Editar Blog</a>
+            <a href="{% url 'borrar_blog' blog.id %}" class="btn btn-danger">Borrar Blog</a>
+    </div>
+    {% endif %}
+    
+    <div class="mt-3">
         <a href="{% url 'lista_blogs' %}" class="btn btn-primary mt-3">Volver a la lista</a>
-</div>
+    </div>
 </div>
 {% endblock main %}
