--- a/Blog_Page/AppBlog/templates/AppBlog/base.html
+++ b/Blog_Page/AppBlog/templates/AppBlog/base.html
@@ -10,7 +10,6 @@
 </head>
 <body id="page-top" style="padding-top: 4.5rem;">
 
-    
     {% if messages %}
     <div class="messages">
         {% for message in messages %}
@@ -28,12 +27,15 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav mr-auto"> <!-- Modificación: Añadir "mr-auto" para empujar contenido a la derecha -->
+            <ul class="navbar-nav mr-auto">
                 <li class="nav-item"><a class="nav-link" href="{% url 'peliculas' %}">Películas</a></li>
                 <li class="nav-item"><a class="nav-link" href="{% url 'about' %}">About</a></li>
                 <li class="nav-item"><a class="nav-link" href="{% url 'lista_blogs' %}">Blogs</a></li>
+                {% if user.is_authenticated %}
+                <li class="nav-item"><a class="nav-link" href="{% url 'lista_mensajes' %}">Mensajes</a></li>
+                {% endif %}
             </ul>
-            <ul class="navbar-nav"> <!-- Nuevo ul para separar la sección de perfil -->
+            <ul class="navbar-nav">
                 {% if user.is_authenticated %}
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'perfil' %}">
@@ -54,8 +56,6 @@
         </div>
     </div>
 </nav>
-
-
 
     {% block main %}
     <div style="margin-top: 5rem;"> 
