--- a/Blog_Page/Mensajes/templates/Mensajes/enviar_mensaje.html
+++ b/Blog_Page/Mensajes/templates/Mensajes/enviar_mensaje.html
@@ -13,12 +13,16 @@ Enviar Mensaje
     
     <!-- Destinatario -->
     <div class="form-group">
-        <label for="{{ form.destinatario.id_for_label }}">Destinatario:</label>
-        {{ form.destinatario }}
-        {% if form.destinatario.errors and form.data %}
-            <div class="alert alert-danger">
-                {{ form.destinatario.errors|join:", " }}
-            </div>
+        {% if not form.destinatario.value %}
+            <label for="{{ form.destinatario.id_for_label }}">Destinatario:</label>
+            {{ form.destinatario }}
+            {% if form.destinatario.errors and form.is_bound %}
+                <div class="alert alert-danger">
+                    {{ form.destinatario.errors|join:", " }}
+                </div>
+            {% endif %}
+        {% else %}
+            <input type="hidden" name="{{ form.destinatario.name }}" value="{{ form.destinatario.value }}">
         {% endif %}
     </div>
 
@@ -26,7 +30,7 @@ Enviar Mensaje
     <div class="form-group">
         <label for="{{ form.cuerpo.id_for_label }}">Asunto:</label>
         {{ form.cuerpo }}
-        {% if form.cuerpo.errors and form.data %}
+        {% if form.cuerpo.errors and form.is_bound %}
             <div class="alert alert-danger">
                 {{ form.cuerpo.errors|join:", " }}
             </div>
