--- a/Blog_Page/Usuarios/templates/Usuarios/perfil.html
+++ b/Blog_Page/Usuarios/templates/Usuarios/perfil.html
@@ -17,11 +17,14 @@
     <p>Sitio Web: <a href="{{ perfil.web_url }}" target="_blank">{{ perfil.web_url }}</a></p>
 
     <!-- ... más detalles del perfil ... -->
+
+    {% if es_mismo_usuario %}
     <a href="{% url 'editar' %}">Editar Perfil</a> |
+    {% endif %}
     <a href="{% url 'logout' %}">Desloguearse</a>
 {% else %}
     <a href="{% url 'login' %}">Iniciar Sesión</a> |
-    <a href="{% url 'registro' %}">Registrarse</a>
+    <a href="{% url 'register' %}">Registrarse</a>
 {% endif %}
-    
+
 {% endblock main %}
