blogs en inicio

--- a/Blog_Page/AppBlog/templates/AppBlog/base.html
+++ b/Blog_Page/AppBlog/templates/AppBlog/base.html
@@ -58,18 +58,9 @@
 </nav>
 
     {% block main %}
-    <div style="margin-top: 5rem; text-align: center;">
+    <div style="margin-top: 5rem; text-align: center; display: flex; flex-direction: column; min-height: 80vh; justify-content: center;">
         <h1>Blog de Películas</h1>
     </div>
     {% endblock main %}
 
-    <!-- Pie de página -->
-    <footer class="py-5 bg-dark">
-        <div class="container">
-            <div class="row">
-                <div class="col-12 text-center">
-            <p class="m-0 text-center text-white">Derechos reservados &copy; Tu sitio web 2023</p>
-        </div>
-    </footer>
-</body>
-</html>
+
