--- a/Blog_Page/AppBlog/templates/AppBlog/lista_blogs.html
+++ b/Blog_Page/AppBlog/templates/AppBlog/lista_blogs.html
@@ -24,7 +24,7 @@
         {% endif %}
         
         <div class="card-body">
-            <h5 class="card-title">{{ blog.titulo }}</h5>
+            <h5 class="card-title" style="color: #000;">{{ blog.titulo }}</h5>
             <p class="card-text">{{ blog.resumen }}</p>
             <p class="card-text"><small class="text-muted">{{ blog.fecha_creacion|date:"d M Y" }}</small></p>
             <a href="{% url 'detalle_blog' blog.id %}" class="btn btn-primary">Leer más</a>
